// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInput > renders contrast 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-contrast="true"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders error 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-validation="error"
  >
    <input
      aria-invalid="true"
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders leadingVisual 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
  >
    <span
      aria-hidden="true"
      class="TextInput-icon"
      id="_r_u_"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-search"
        display="inline-block"
        fill="currentColor"
        focusable="false"
        height="16"
        overflow="visible"
        style="vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
        />
      </svg>
    </span>
    <input
      aria-describedby="_r_u_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders leadingVisual 2`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
  >
    <span
      aria-hidden="true"
      class="TextInput-icon"
      id="_r_11_"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-search"
        display="inline-block"
        fill="currentColor"
        focusable="false"
        height="16"
        overflow="visible"
        style="vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
        />
      </svg>
    </span>
    <input
      aria-describedby="_r_11_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders leadingVisual 3`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
  >
    <span
      aria-hidden="true"
      class="TextInput-icon"
      id="_r_14_"
    >
      <div>
        Trailing
      </div>
    </span>
    <input
      aria-describedby="_r_14_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders leadingVisual 4`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
  >
    <span
      aria-hidden="true"
      class="TextInput-icon"
      id="_r_17_"
    >
      <div>
        Trailing
      </div>
    </span>
    <input
      aria-describedby="_r_17_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders monospace 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-monospace="true"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders placeholder 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      placeholder="560076"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders trailingAction icon button 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-action="true"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
    <span
      class="TextInput-action prc-components-TextInputAction-tmsle"
    >
      <button
        aria-describedby="_r_23_-loading-announcement"
        aria-labelledby="_r_22_"
        class="prc-Button-ButtonBase-Eb8-K prc-components-Invisible-6q42n prc-Button-IconButton-GE6m6"
        data-component="IconButton"
        data-loading="false"
        data-no-visuals="true"
        data-size="small"
        data-variant="invisible"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="octicon octicon-search"
          display="inline-block"
          fill="currentColor"
          focusable="false"
          height="16"
          overflow="visible"
          style="vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
          />
        </svg>
      </button>
      <span
        aria-hidden="true"
        class="prc-TooltipV2-Tooltip-jugyt"
        data-direction="s"
        id="_r_22_"
        popover="auto"
      >
        Icon label
      </span>
    </span>
  </span>
</div>
`;

exports[`TextInput > renders trailingAction text button 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-action="true"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
    <span
      class="TextInput-action prc-components-TextInputAction-tmsle"
    >
      <button
        aria-describedby="_r_1p_-loading-announcement"
        class="prc-Button-ButtonBase-Eb8-K prc-components-Invisible-6q42n"
        data-loading="false"
        data-no-visuals="true"
        data-size="medium"
        data-variant="invisible"
        type="button"
      >
        <span
          class="prc-Button-ButtonContent-KZ5Bz"
          data-align="center"
          data-component="buttonContent"
        >
          <span
            class="prc-Button-Label-B1e2-"
            data-component="text"
          >
            Clear
          </span>
        </span>
      </button>
    </span>
  </span>
</div>
`;

exports[`TextInput > renders trailingAction text button with a tooltip 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-action="true"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
    <span
      class="TextInput-action prc-components-TextInputAction-tmsle"
    >
      <button
        aria-describedby="_r_1u_-loading-announcement _r_1t_"
        class="prc-Button-ButtonBase-Eb8-K prc-components-Invisible-6q42n"
        data-loading="false"
        data-no-visuals="true"
        data-size="medium"
        data-variant="invisible"
        type="button"
      >
        <span
          class="prc-Button-ButtonContent-KZ5Bz"
          data-align="center"
          data-component="buttonContent"
        >
          <span
            class="prc-Button-Label-B1e2-"
            data-component="text"
          >
            Clear
          </span>
        </span>
      </button>
      <span
        aria-hidden="true"
        class="prc-components-ConditionalTooltip-QBYW3 prc-TooltipV2-Tooltip-jugyt"
        data-direction="s"
        id="_r_1t_"
        popover="auto"
        role="tooltip"
      >
        Clear input
      </span>
    </span>
  </span>
</div>
`;

exports[`TextInput > renders trailingVisual 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    
  


    <div>
      <span
        aria-busy="false"
        class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
        data-trailing-visual="true"
      >
        <input
          aria-describedby="_r_1b_"
          class="prc-components-Input-sKHcw"
          data-component="input"
          name="search"
          placeholder="Search"
          type="text"
        />
        <span
          aria-hidden="true"
          class="TextInput-icon"
          id="_r_1b_"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      aria-busy="false"
      class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
      data-trailing-visual="true"
    >
      <input
        aria-describedby="_r_1b_"
        class="prc-components-Input-sKHcw"
        data-component="input"
        name="search"
        placeholder="Search"
        type="text"
      />
      <span
        aria-hidden="true"
        class="TextInput-icon"
        id="_r_1b_"
      >
        <svg
          aria-hidden="true"
          class="octicon octicon-search"
          display="inline-block"
          fill="currentColor"
          focusable="false"
          height="16"
          overflow="visible"
          style="vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
          />
        </svg>
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TextInput > renders trailingVisual 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    
  


    <div>
      <span
        aria-busy="false"
        class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
        data-trailing-visual="true"
      >
        <input
          aria-describedby="_r_1b_"
          class="prc-components-Input-sKHcw"
          data-component="input"
          name="search"
          placeholder="Search"
          type="text"
        />
        <span
          aria-hidden="true"
          class="TextInput-icon"
          id="_r_1b_"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        aria-busy="false"
        class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
        data-trailing-visual="true"
      >
        <input
          aria-describedby="_r_1e_"
          class="prc-components-Input-sKHcw"
          data-component="input"
          name="search"
          placeholder="Search"
          type="text"
        />
        <span
          aria-hidden="true"
          class="TextInput-icon"
          id="_r_1e_"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      aria-busy="false"
      class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
      data-trailing-visual="true"
    >
      <input
        aria-describedby="_r_1e_"
        class="prc-components-Input-sKHcw"
        data-component="input"
        name="search"
        placeholder="Search"
        type="text"
      />
      <span
        aria-hidden="true"
        class="TextInput-icon"
        id="_r_1e_"
      >
        <svg
          aria-hidden="true"
          class="octicon octicon-search"
          display="inline-block"
          fill="currentColor"
          focusable="false"
          height="16"
          overflow="visible"
          style="vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
          />
        </svg>
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TextInput > renders trailingVisual 3`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-visual="true"
  >
    <input
      aria-describedby="_r_1h_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
    <span
      aria-hidden="true"
      class="TextInput-icon"
      id="_r_1h_"
    >
      <div>
        Trailing
      </div>
    </span>
  </span>
</div>
`;

exports[`TextInput > renders trailingVisual 4`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-visual="true"
  >
    <input
      aria-describedby="_r_1k_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="search"
      placeholder="Search"
      type="text"
    />
    <span
      aria-hidden="true"
      class="TextInput-icon"
      id="_r_1k_"
    >
      <div>
        Trailing
      </div>
    </span>
  </span>
</div>
`;

exports[`TextInput > renders with a loading indicator 1`] = `
<div>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-visual="true"
  >
    <input
      aria-describedby="_r_29_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id="_r_29_"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_28_"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_2b_"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby="_r_2d_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id="_r_2d_"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_2c_"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-visual="true"
  >
    <input
      aria-describedby="_r_2i_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id="_r_2i_"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_2h_"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_2k_"
      >
        <div
          class="prc-components-SpinnerHidden-c-Wb6"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-components-Spinner-80CNt prc-components-SpinnerLeading-kUwx3 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby="_r_2k_ _r_2m_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id="_r_2m_"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_2l_"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_2p_"
      >
        <div
          class="prc-components-SpinnerHidden-c-Wb6"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-components-Spinner-80CNt prc-components-SpinnerLeading-kUwx3 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby="_r_2p_ _r_2r_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id="_r_2r_"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_2q_"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
    data-trailing-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_2u_"
      >
        <div
          class="prc-components-SpinnerVisible-FH5pT"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-components-Spinner-80CNt prc-components-SpinnerLeading-kUwx3 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby="_r_2u_ _r_30_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id="_r_30_"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_2v_"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-visual="true"
  >
    <input
      aria-describedby="_r_34_ _r_35_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id="_r_35_"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_34_"
      >
        <div
          class="prc-components-SpinnerHidden-c-Wb6"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-components-Spinner-80CNt prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
    data-trailing-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_37_"
      >
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby="_r_38_ _r_39_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id="_r_39_"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_38_"
      >
        <div
          class="prc-components-SpinnerVisible-FH5pT"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-components-Spinner-80CNt prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-trailing-visual="true"
  >
    <input
      aria-describedby="_r_3d_ _r_3e_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id="_r_3e_"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_3d_"
      >
        <div
          class="prc-components-SpinnerHidden-c-Wb6"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-components-Spinner-80CNt prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
    data-size="small"
    data-trailing-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_3g_"
      >
        <div
          class="prc-components-SpinnerHidden-c-Wb6"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-components-Spinner-80CNt prc-components-SpinnerLeading-kUwx3 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby="_r_3g_ _r_3h_ _r_3i_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id="_r_3i_"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_3h_"
      >
        <div
          class="prc-components-SpinnerVisible-FH5pT"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-components-Spinner-80CNt prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
    data-trailing-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_3l_"
      >
        <div
          class="prc-components-SpinnerHidden-c-Wb6"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-components-Spinner-80CNt prc-components-SpinnerLeading-kUwx3 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby="_r_3l_ _r_3m_ _r_3n_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id="_r_3n_"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_3m_"
      >
        <div
          class="prc-components-SpinnerVisible-FH5pT"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-components-Spinner-80CNt prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
  <span
    aria-busy="true"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-leading-visual="true"
    data-size="large"
    data-trailing-visual="true"
  >
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_3q_"
      >
        <div
          class="prc-components-SpinnerVisible-FH5pT"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerHidden-c-Wb6 prc-components-Spinner-80CNt prc-components-SpinnerLeading-kUwx3 prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby="_r_3q_ _r_3r_ _r_3s_"
      class="prc-components-Input-sKHcw"
      data-component="input"
      type="text"
    />
    <span
      class="prc-src-InternalVisuallyHidden-4enpf"
      id="_r_3s_"
    >
      Loading
    </span>
    <span
      class="TextInput-icon"
    >
      <div
        class="prc-components-Box-kkr8W"
        id="_r_3r_"
      >
        <div
          class="prc-components-SpinnerHidden-c-Wb6"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          class="prc-Spinner-Box-yUhAo"
        >
          <svg
            aria-hidden="true"
            class="prc-components-SpinnerVisible-FH5pT prc-components-Spinner-80CNt prc-Spinner-SpinnerAnimation-KWCu3"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              stroke-opacity="0.25"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              vector-effect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>
</div>
`;

exports[`TextInput > should render a password input 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="password"
      type="password"
    />
  </span>
</div>
`;
